--- a/coffee shop reviews/coffee shop reviews.vbproj
+++ b/coffee shop reviews/coffee shop reviews.vbproj
@@ -82,10 +82,10 @@
     <Compile Include="AllDataDialog.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.vb">
-      <DependentUpon>Form1.vb</DependentUpon>
+    <Compile Include="ReviewManager.Designer.vb">
+      <DependentUpon>ReviewManager.vb</DependentUpon>
     </Compile>
-    <Compile Include="Form1.vb">
+    <Compile Include="ReviewManager.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="My Project\AssemblyInfo.vb" />
@@ -124,8 +124,8 @@
     <EmbeddedResource Include="AllDataDialog.resx">
       <DependentUpon>AllDataDialog.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.vb</DependentUpon>
+    <EmbeddedResource Include="ReviewManager.resx">
+      <DependentUpon>ReviewManager.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="My Project\Resources.resx">
       <Generator>VbMyResourcesResXFileCodeGenerator</Generator>
